--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 
-
-
-
+pytz==2018.3  # https://github.com/stub42/pytz
+awesome-slugify==1.6.5  # https://github.com/dimka665/awesome-slugify
+Pillow==5.0.0  # https://github.com/python-pillow/Pillow
+argon2-cffi==18.1.0  # https://github.com/hynek/argon2_cffi
+whitenoise==3.3.1  # https://github.com/evansd/whitenoise
 redis>=2.10.5  # https://github.com/antirez/redis
 
 
@@ -13,6 +15,11 @@ django-model-utils==3.1.1  # https://github.com/jazzband/django-model-utils
 django-allauth==0.35.0  # https://github.com/pennersr/django-allauth
 django-crispy-forms==1.7.2  # https://github.com/django-crispy-forms/django-crispy-forms
 django-redis==4.9.0  # https://github.com/niwinz/django-redis
+django-storages==1.6.5  # https://github.com/jschneier/django-storages
+django-anymail==2.0  # https://github.com/anymail/django-anymail
 
 # Django REST Framework
 djangorestframework==3.7.7  # https://github.com/encode/django-rest-framework
+
+
+psycopg2==2.7.4 --no-binary psycopg2  # https://github.com/psycopg/psycopg2
